[package]
name = "nostrdb-jni"
version = "0.1.1"
edition = "2021"
description = "JNI bindings for nostrdb - high-performance embedded Nostr database"
authors = ["398ja"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]  # Dynamic library for JNI

[dependencies]
# JNI bindings
jni = "0.21"

# nostrdb - the core library (remote git for CI)
# Note: repo uses a `master` branch.
nostrdb = { git = "https://github.com/398ja/nostrdb-rs.git", branch = "master" }

# Error handling
thiserror = "2.0"

# JSON serialization for notes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding/decoding
hex = "0.4"

# Logging
tracing = "0.1"

# Pin home to avoid edition2024 requirement in 0.5.12
home = "=0.5.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
opt-level = 3            # Maximum optimization
